--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -119,18 +119,18 @@ spring.profiles.active=frontend
 # Varsayilan MimeMessage kodlamasiniayarlamak i\uFFFDin kullanilir
 # spring.mail.default-encoding=UTF-8
 #  Mail serverin adresi
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
 #@Value("${spring.mail.username}")  Spring taraf?ndan böyle alaca??m.
-spring.mail.username=denememalatya4444@gmail.com
+#spring.mail.username=denememalatya4444@gmail.com
 # https://myaccount.google.com/u/1/apppasswords?utm_source=google-account&utm_medium=myaccountsecurity&utm_campaign=tsv-settings&rapt=AEjHL4P8nSQ8twCoE1ef0PRF8UdwMl3dsLvMC-Wptpu2fkt5fuQyWb6WHDgyYO48RiROZCs97aiuHc6fwzh6A0_5RJriEThq1reQFzrc4OIVUL0FJwL0hew
-spring.mail.password=rsio gcdc vmrv jnng
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
+#spring.mail.password=rsio gcdc vmrv jnng
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+#spring.mail.properties.mail.smtp.connectiontimeout=5000
+#spring.mail.properties.mail.smtp.timeout=5000
+#spring.mail.properties.mail.smtp.writetimeout=5000
 
 
 ######################################################################################
@@ -159,12 +159,12 @@ logging.level.root=INFO
 ### COMMAND LINE RULES  ########################################################################
 ######################################################################################
 ### Spring Security  #################################################################
-spring.command.line.rules.superadmin.nickname=superadmin
-spring.command.line.rules.superadmin.name=Hamit
-spring.command.line.rules.superadmin.surname=M?zrak
-spring.command.line.rules.superadmin.email=hamitmizrak@gmail.com
-spring.command.line.rules.superadmin.password=root
-spring.command.line.rules.superadmin.roles=SUPER_ADMIN
+#spring.command.line.rules.superadmin.nickname=superadmin
+#spring.command.line.rules.superadmin.name=Hamit
+#spring.command.line.rules.superadmin.surname=M?zrak
+#spring.command.line.rules.superadmin.email=hamitmizrak@gmail.com
+#spring.command.line.rules.superadmin.password=root
+#spring.command.line.rules.superadmin.roles=SUPER_ADMIN
 
 ######################################################################################
 ######################################################################################
