--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,10 +34,8 @@ spring.jackson.mapper.default-view-inclusion=true
 # localhost:4444/java
 # server.servlet.context-path=/java
 # Uygulama baz?ndan almak istiyorsak
-server.servlet.context-parameters.my_special.name=Hamit
-user.surname=Mizrak
-
-
+server.servlet.context-parameters.my_special.name=Nazan
+user.surname=Korkmaz
 
 
 
@@ -45,13 +43,6 @@ user.surname=Mizrak
 ### Api Result   #####################################################################
 api.result.error=Genel Exception 
 api.result.message=Rest Global Handling Exception
-
-######################################################################################
-### Pageable  ########################################################################
-spring.data.web.pageable.page-parameter=currentPage
-spring.data.web.pageable.size-parameter=pageSize
-spring.data.web.pageable.default-page-size=10
-spring.data.web.pageable.max-page-size=1000
 
 
 
@@ -62,13 +53,7 @@ spring.profiles.active=frontend
 # spring.profiles.active=fullstack
 
 
-
-
-######################################################################################
-######################################################################################
 ### LOGLAMA  ########################################################################
-######################################################################################
-### Log ##############################################################################
 # Loglama Asenkron
 # sabit bir yerde saklamaliyiz.
 logging.file.name=./log/blog.log
@@ -76,46 +61,12 @@ logging.file.name=./log/blog.log
 # logging.level.org.springframework=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
-# logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
-# Gunluk dosyasinin konumunu yapilandirir.
-# logging.file.path=./
-# logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
-# Log LEVEL (7)
-# O F E W I D T
-# OFF > FATAL > ERROR > WARN > INFO > DEBUG > TRACE
 logging.level.root=INFO
-
-
-
-
-######################################################################################
-### Session Time out  ################################################################
-# adminPage bir sey yapmazsa 30 dakika sonra admin kapansin
-# server.servlet.session_timeout=1m
-server.servlet.session_timeout=30m
-# server.servlet.session.cookie.http-only=true
-# server.servlet.session.cookie.secure=true
-
 
 
 ## http://localhost:9999/admin/info
 info.app.name=Java Full Stack Developer
-info.app.description= Java Spring Boot dersi
-info.app.version=44
-
-
-######################################################################################
-### PROMETHEUS: Monitoring   #########################################################
-# ENDPOINTS WEB CONFIGURATION
-management.endpoints.web.exposure.include=*
-# management.endpoints.web.exposure.include= prometheus,health,info,metrics
-management.endpoint.shutdown.enabled=true
-management.endpoint.prometheus.enabled=true
-management.security.enabled=false
-# HEALTH ENDPOINT
-management.endpoint.health.show-details=always
-
-
+info.app.description= To-Do App
 
 ######################################################################################
 ### DATABASE  ########################################################################
@@ -143,8 +94,6 @@ security.basic.enabled=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.datasource.driverClassName=org.h2.Driver
-# spring.datasource.url=jdbc:h2:mem:blog
-## spring.datasource.url=jdbc:h2:file:./memory_persist/register;useSSL=falseDB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
 spring.datasource.url=jdbc:h2:file:./memory_persist/blog
 spring.datasource.username=sa
 spring.datasource.password=
